--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,3 @@
 PORT = 4445
+DATABASE_URL = mongodb+srv://sparshyadavmrt:OyzUyLzVS7yiUg5J@cluster0.qvl6t0z.mongodb.net/TwitterDB
+JWT_SECRET = "TwitterJWTSecret"
